Initial commit for integration of AngularJs in Time Sheet.

--- a/httpdocs/html/index.html
+++ b/httpdocs/html/index.html
@@ -51,6 +51,7 @@
     <script type="text/javascript" src="../node_modules/angular/angular.min.js"></script>
     <script type="text/javascript" src="../node_modules/angularjs-datatables/src/angular-datatables.js"></script>
     <script type="text/javascript" src="../admin/LeaveApplication/leaveCtrl.js"></script>
+    <script type="text/javascript" src="../admin/TimeSheet/timeSheetCtrl.js"></script>
     <script>
       Breakpoints();
     </script>
