Account Settings. Apply AngularJs.

--- a/httpdocs/html/index.html
+++ b/httpdocs/html/index.html
@@ -50,6 +50,7 @@
     <script src="../../global/vendor/breakpoints/breakpoints.js"></script>
     <script type="text/javascript" src="../node_modules/angular/angular.min.js"></script>
     <script type="text/javascript" src="../node_modules/angularjs-datatables/src/angular-datatables.js"></script>
+    <script type="text/javascript" src="../admin/AccountSettings/accountSettingsCtrl.js"></script>
     <script type="text/javascript" src="../admin/LeaveApplication/leaveCtrl.js"></script>
     <script type="text/javascript" src="../admin/TimeSheet/timeSheetCtrl.js"></script>
     <script>
